--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Source+Sans+Pro:wght@300&display=swap');
+
 html,
 body {
   padding: 0;
@@ -14,3 +16,16 @@ a {
 * {
   box-sizing: border-box;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+}
+
+p, span, a, li, button {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+p {
+  font-size: 18px;
+}
+
