submit and basic display page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
 }
 
 a {
-  color: inherit;
+  color: #1f4ab8;
   text-decoration: none;
 }
 
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
 }
 
-p, span, a, li, button, input {
+p, span, a, li, button, input, textarea {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
