--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ p {
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #a90000;
+  background: #1f4ab8;
 }
 
 /* Position and sizing of clickable cross button */
